--- a/style.css
+++ b/style.css
@@ -90,26 +90,28 @@ html, body {
     border: 1px solid black;
     background: rgb(224, 224, 209);    
     vertical-align:  middle;
+    z-index: 100;
 }
 
-#side_nav {
+#vert_ul {
+    list-style-type: none;
     padding: 10px;
     margin: 0px;
 }
 
-#side_nav  li {
+#vert_ul  li {
     display: block;
     padding: 0px;
 }
 
-#side_nav a {
+#vert_ul li a {
     text-decoration: none;
     padding: 1px ;
     color: blue; 
     width: 100%;
 }
 
-#side_nav a:hover {
+#vert_ul a:hover {
     background-color: rgb(178, 36, 0);
     color: white;
 }
@@ -187,7 +189,7 @@ iframe {
     #nav_container {
         font-size:  0.8em;
     }
-     #side_nav {
+     #vert_ul {
         font-size:  0.8em;
     }
     #teacher_img {
