--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ header {
     background: rgb(224, 224, 209);
     border-top: 1px double black;
     border-bottom: 1px double black;
-    padding-left:  130px;
+    padding-left:  15px;
     font-size:  1.2em;
   }
 
@@ -142,7 +142,7 @@ p {
 footer {
     clear: both;
     position: relative;
-    top: 190px;
+    top: 210px;
     width: 100%;
     background: #fff;
     text-align: center;
@@ -152,15 +152,15 @@ footer {
 #footer_img {
     width: 274px;
     height: 184px;
-    margin: 0px 0px 15px 0px;
+    margin: 0px;
 }
 
 #logo_div {
     text-align: center;
     position: relative;
-    top: 200px;
+    top: 210px;
     height: 140;
-    margin-top: 15px;
+    margin-top: 35px;
 }
 
 #cal_footer {
@@ -227,69 +227,38 @@ iframe {
     }
 }
 
-@media (max-width:  1000px) {
+@media (max-width: 767px) {
     #header_text {
-        font-size: 0.8em;
+        font-size: 0.7em;
+        height: 100px; 
     }
-    #nav_container {
+    #upper_bar { 
+        height: 100px;
+    }
+     #nav_container {
         font-size:  0.8em;
     }
      #vert_ul {
         font-size:  0.8em;
     }
-    #text_img {
-        width: 110px;
-        height: 80px;
-    }
-    footer {
-        top: 180px;
-        height: 92px;
-    }
-    #footer_img {
-    width: 137px;
-    height: 92px;
-    margin: 0px 0px 0px 0px;
-    }
-    #logo_div {
-        top: 190px;
-        margin-bottom: 20px;
-    }
-    #cal_footer {
-        top: 180px;
-    }
-    #cal_footer_img {
-    width: 182px;
-    height: 90px;
-    margin: 0px 0px 0px 0px;
-    }
-}
-
-@media (max-width:  800px) {
-    iframe {
-        height: 600px;
-    }
-}
-
-@media (max-width:  675px) {
-    #header_text {
-        font-size: 0.6em;
-        height: 100px;  /*new.............................*/
-    }
-    #upper_bar {  /*new.............................*/
-        height: 100px;
-    }
     #vert_nav_bar {
         top: 140px;
+        margin-bottom: 5px
     }
     #text_container {
         top: 140px;
     }
     #text_img {
+        /*width: 110px;
+        height: 80px;*/
         top: 140px;
+        width: 0px;
+        height: 0px;
+        border: none;
     }
     iframe {
         top: 145px;
-        height: 400px;
+        height: 600px;
      }
      #header_image {
           height: 80px;
@@ -299,14 +268,16 @@ iframe {
      #header_text {
           margin-right: 15px;
      }
-}
-
-@media (max-width:  415px) {
-    iframe {
-        height: 400px;
+     footer {
+        height: 92px;
+     }
+     #footer_img {
+        width: 137px;
+        height: 92px;
     }
-    #nav_container {
-        padding-left: 30px;
+    #logo_img {
+        height: 35px;
+        width: 69px;
     }
 }
 
