--- a/style.css
+++ b/style.css
@@ -142,11 +142,12 @@ p {
 footer {
     clear: both;
     position: relative;
-    top: 210px;
+    top: 165px;
     width: 100%;
+    height: 184px;
     background: #fff;
     text-align: center;
-    height: 184px;
+    margin-top: 35px;
 }
 
 #footer_img {
@@ -156,35 +157,47 @@ footer {
 }
 
 #logo_div {
-    text-align: center;
     position: relative;
-    top: 210px;
+    top: 165px;
+    width: 100%;
     height: 140;
+    background: #fff;
     margin-top: 35px;
+    text-align: center;
 }
 
 #cal_footer {
     position: relative;
-    top: 190px;
+    top: 165px;
     width: 100%;
     background: #fff;
     text-align: center;
+    height: 135px;
+    margin-top: 35px;
 }
 
 #cal_footer_img {
     width: 364px;
     height: 135px;
-    margin: 20px 0px 15px;
+}
+
+#cal_logo_div {
+    text-align: center;
+    position: relative;
+    top: 165px;
+    height: 70px;
+    margin-top: 35px;
 }
 
 iframe {
     position: relative;
-    top: 195px;
+    top: 165px;
     display:  block;
     width:  94%;  
     height: 1900px;
     margin-right: 3%;
     margin-left: 3%;
+    margin-top: 35px;
     overflow: hidden;
 }
 
@@ -228,6 +241,10 @@ iframe {
 }
 
 @media (max-width: 767px) {
+     iframe {
+        margin-top: 0px;
+        height: 450px;
+     }
     #header_text {
         font-size: 0.7em;
         height: 100px; 
@@ -256,10 +273,6 @@ iframe {
         height: 0px;
         border: none;
     }
-    iframe {
-        top: 145px;
-        height: 600px;
-     }
      #header_image {
           height: 80px;
           width: 80px;
@@ -270,12 +283,32 @@ iframe {
      }
      footer {
         height: 92px;
+        margin-top: 20px;
      }
      #footer_img {
         width: 137px;
         height: 92px;
     }
+    #logo_div {
+        height:69px;
+    }
     #logo_img {
+        height: 35px;
+        width: 69px;
+    }
+    #cal_footer {
+        height: 90px;
+        margin-top: 20px;
+    }
+    #cal_footer_img {
+        width: 243px;
+        height: 90px;
+    }
+     #cal_logo_div {
+        height: 69px;
+        margin-top: 20px;
+    }
+    #cal_logo_img {
         height: 35px;
         width: 69px;
     }
@@ -283,7 +316,7 @@ iframe {
 
 @media (max-width:  325px) {
     iframe {
-        height: 300px;
+        height: 375px;
     }
 }
 
