Revamped home page using Bootstrap. Changed name of 'register' form/page to 'profile'and altered links accordingly.

--- a/style.css
+++ b/style.css
@@ -1,211 +1,9 @@
-.tab5 {
-    margin-left: 5px;
-}
-
-.tab10 {
-    margin-left: 20px;
-}
-
-header {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    z-index:  200;
-}
-
-.calendar {
-    position: fixed;
-}
-
-#upper_bar {
-    background: url('images/blue_background.jpg');
-    background-size: cover;
-    background-color: lightblue;
-    background-repeat: no-repeat;  
-    color: rgb(255, 255, 153);
-    padding: 0px;
-    margin: 0px;
-    height: 130px;
-    width:  100%;
-}
-
- #header_image {
-    float: left;
-    vertical-align:  middle;
-    padding:  15px  25px 15px 15px;
-    width: 100px;
-    height: 100px;
-}
-
-#header_text {
-    height: 130px;
-    display: table-cell;
-    vertical-align:  middle;
-    text-align:  center ;
-    text-shadow: 2px 2px 2px black;
-    padding-right: 25px;
-}
-
-#nav_container {
-    clear: both;
-    width: 100%;
-    list-style-type: none;
-    margin-top: 0px;
-    margin-bottom: 15px;
-    background: rgb(224, 224, 209);
-    border-top: 1px double black;
-    border-bottom: 1px double black;
-    padding-left:  15px;
-    font-size:  1.2em;
-  }
-
-#nav_container li {
-    display: inline-block;
-    padding:  6px 3px;
-    height: 100%;
-}
-
-#nav_container li a {
-    text-decoration: none;
-    padding: 3px 3px;
-    color: blue; 
-    width: 100%;
-}
-
-#nav_container a:hover {
-    background-color: rgb(178, 36, 0);
-    color: white;
-}
-
-html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-}
-
-#vert_nav_bar {
-    float: left;
-    position: relative;
-    top: 165px;
-    margin: 0px 15px 15px 15px;
-    width: 130px;
-    border: 1px solid black;
-    background: rgb(224, 224, 209);    
-    vertical-align:  middle;
-    z-index: 100;
-    overflow: hidden;
-}
-
-#vert_ul {
-    list-style-type: none;
-    padding: 10px;
-    margin: 0px;
-}
-
-#vert_ul  li {
-    display: block;
-    padding: 0px;
-}
-
-#vert_ul li a {
-    text-decoration: none;
-    padding: 1px ;
-    color: blue; 
-    width: 100%;
-}
-
-#vert_ul a:hover {
-    background-color: rgb(178, 36, 0);
-    color: white;
-}
-
-#text_container {
-    position: relative;
-    top: 165px;
-    margin-left: 10px;
-    text-align: left;
-}
-
-p {
-    margin-right: 10px;
-    margin-bottom: 0px;
-}
-
-#text_img  {
-    float: right;
-    position: relative;
-    top: 165px;
-    margin:  0px  15px 15px 15px;
-    width: 220px;
-    height: 160px;
-    border: 1px solid black;
-}
-
-footer {
-    clear: both;
-    position: relative;
-    top: 165px;
-    width: 100%;
-    height: 184px;
-    background: #fff;
+#foot {
     text-align: center;
-    margin-top: 35px;
-}
-
-#footer_img {
-    width: 274px;
-    height: 184px;
-    margin: 0px;
-}
-
-#logo_div {
-    position: relative;
-    top: 165px;
-    width: 100%;
-    height: 140;
-    background: #fff;
-    margin-top: 35px;
-    text-align: center;
-}
-
-#cal_footer {
-    position: relative;
-    top: 165px;
-    width: 100%;
-    background: #fff;
-    text-align: center;
-    height: 135px;
-    margin-top: 35px;
-}
-
-#cal_footer_img {
-    width: 364px;
-    height: 135px;
-}
-
-#cal_logo_div {
-    text-align: center;
-    position: relative;
-    top: 165px;
-    height: 70px;
-    margin-top: 35px;
-}
-
-iframe {
-    position: relative;
-    top: 165px;
-    display:  block;
-    width:  94%;  
-    height: 1900px;
-    margin-right: 3%;
-    margin-left: 3%;
-    margin-top: 35px;
-    overflow: hidden;
 }
 
 /************************************************/
-/*------------------register---------------------------*/
+/*-----------------profile--------------------------*/
 /************************************************/
 
 .form_block {
@@ -223,134 +21,6 @@ iframe {
 #sub {
     padding: 4px 6px;
     border-radius: 4px;
-    background: rgb(81,180, 208);
+    background: #5bc0de;
     color: white;
 }
-
-/************************************************/
-/*------------------media queries------------------*/
-/************************************************/
-
-@media (max-width:  2000px) {
-    iframe {
-        height: 1800px;
-    }
-}
-
-@media (max-width:  1800px) {
-    iframe {
-        height: 1600px;
-    }
-}
-
-@media (max-width:  1600px) {
-    iframe {
-        height: 1400px;
-    }
-}
-
-@media (max-width:  1400px) {
-    iframe {
-        height: 1200px;
-    }
-}
-
-@media (max-width:  1200px) {
-    iframe {
-        height: 1000px;
-    }
-}
-
-@media (max-width:  1000px) {
-    iframe {
-        height: 800px;
-    }
-}
-
-@media (max-width: 767px) {
-     iframe {
-        margin-top: 0px;
-        height: 450px;
-     }
-    #header_text {
-        font-size: 0.7em;
-        height: 100px; 
-    }
-    p {
-        font-size: 0.8em;
-    }
-    #upper_bar { 
-        height: 100px;
-    }
-     #nav_container {
-        font-size:  0.8em;
-    }
-     #vert_ul {
-        font-size:  0.8em;
-    }
-    #vert_nav_bar {
-        top: 140px;
-        margin-bottom: 5px
-    }
-    #text_container {
-        top: 140px;
-    }
-    #text_img {
-        /*width: 110px;
-        height: 80px;*/
-        top: 140px;
-        width: 0px;
-        height: 0px;
-        border: none;
-    }
-     #header_image {
-          height: 80px;
-          width: 80px;
-          padding: 10px 15px 10px 10px;
-     }
-     #header_text {
-          margin-right: 15px;
-     }
-     footer {
-        height: 92px;
-        margin-top: 20px;
-     }
-     #footer_img {
-        width: 137px;
-        height: 92px;
-    }
-    #logo_div {
-        height:69px;
-    }
-    #logo_img {
-        height: 35px;
-        width: 69px;
-    }
-    #cal_footer {
-        height: 90px;
-        margin-top: 20px;
-    }
-    #cal_footer_img {
-        width: 243px;
-        height: 90px;
-    }
-     #cal_logo_div {
-        height: 69px;
-        margin-top: 20px;
-    }
-    #cal_logo_img {
-        height: 35px;
-        width: 69px;
-    }
-    #reg_title {
-        font-size: 1.5em;
-        text-align: center;
-    }
-}
-
-@media (max-width:  325px) {
-    iframe {
-        height: 375px;
-    }
-}
-
