--- a/style.css
+++ b/style.css
@@ -7,9 +7,10 @@
 /************************************************/
 
 .form_block {
-    background: rgb(224, 224, 209);  
-    padding: 5px 10px;
-    border: 1px solid black;
+    /*background: rgb(224, 224, 209);  */
+    background: #eee;
+   padding: 5px 10px;
+    /*border: 1px solid black;*/
     border-radius:  5px;
     margin-bottom: 20px;
 }
