--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
 /************************************************/
 
 .form_block {
-    background: rgb(224, 224, 209);  
+    background: #eee;  
     padding: 5px 10px;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     border-radius:  5px;
     margin-bottom: 20px;
 }
@@ -18,9 +18,9 @@
     text-align: center;
 }
 
-#sub {
+/*#sub {
     padding: 4px 6px;
     border-radius: 4px;
     background: #5bc0de;
     color: white;
-}
+}*/
