Commented out all declarations for the .ctr selector (except titles).

--- a/style.css
+++ b/style.css
@@ -2,9 +2,8 @@
     text-align: center;
 }
 
-/************************************************/
 /*-----------------profile--------------------------*/
-/************************************************/
+/*********************************************/
 
 .form_block {
     background: #eee;  
@@ -14,9 +13,9 @@
     margin-bottom: 20px;
 }
 
-.ctr {
+/*.ctr {
     text-align: center;
-}
+}*/
 
 /*#sub {
     padding: 4px 6px;
