Added back button to profile_response.php with some associated changes to 'style.css'.

--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
 #profile_alert {
     display:  inline-block;
 }
+.back {
+    text-align: center;
+}
 
 /*-----------------profile--------------------------*/
 /*********************************************/
