--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
 .tab10 {
     margin-left: 10px;
 }
+/*.reset_btn, .submit, #request_ID {
+    color:  #000;
+    font-weight: bold;
+}*/
 .reset_btn {
     margin-left: 20px;
 }
+#request_label  {
+    margin-left: 40px;
+}
+
 #profile_alert {
     display:  inline-block;
 }
@@ -23,6 +31,10 @@ body {
 
 .jumbotron, .center{
     text-align: center;
+}
+
+#block {
+    text-align: left;
 }
 
 /*-----------------profile--------------------------*/
