Rearranged profile form in columns to make it more compact.

--- a/style.css
+++ b/style.css
@@ -8,9 +8,6 @@
 .reset_btn {
     margin-left: 20px;
 }
-#request_label  {
-    margin-left: 40px;
-}
 
 #profile_alert {
     display:  inline-block;
@@ -37,12 +34,20 @@ body {
     text-align: left;
 }
 
+.inline {
+    display: inline-block;
+}
+
+#request {
+    margin-bottom: 20px;
+}
+
 /*-----------------profile--------------------------*/
 /*********************************************/
 
 .form_block {
     background: #eee;  
-    padding: 5px 10px;
+    padding: 10px 10px 5px 10px;
     border-radius:  5px;
     margin-bottom: 20px;
 }
