Added title bar with styling to admin page.

--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ body {
     margin-bottom: 2px;
 }
 
+#admin_head {
+    margin: 0px;
+}
+
 /*-----------------media queries---------------*/
 /*********************************************/
 
