Added page for response to mod_form and page for response to the response if needed. Modified code so that when student ID is requested, a redirect occurs if first and last name are not found in students.json.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 
-#profile_alert {
+#profile_alert, #not_found_alert, #mod_form_response_alert {
     display:  inline-block;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 
 body {
@@ -78,7 +80,7 @@ body {
     margin-bottom: 10px;
 }
 
-#close_classes {
+#close_classes, #delete_student {
     margin-left: 10px;
 }
 
@@ -106,7 +108,6 @@ body {
     margin: 0px;
     padding-top: 10px;
 }
-
 
 /*-----------------media queries---------------*/
 /*********************************************/
